syntax = "proto3";

option java_package = "br.com.digos.grpc";
option java_multiple_files = true;

package br.com.digos.grpc;

service ProductService{
  rpc Create(ProductRequest) returns (ProductResponse);
  rpc FindById(RequestById) returns (ProductResponse);
  rpc Delete(RequestById) returns (EmptyResponse);
  rpc FindAkk(EmptyRequest) returns (ProductResponseList);
}

message ProductResponseList {
  repeated ProductResponse products = 1;
}

message EmptyRequest {}

message EmptyResponse {}

message RequestById {
  int64 id = 1;
}

message ProductRequest{
  string name = 1;
  double price = 2;
  int32 quantity_in_stack = 3;
}

message ProductResponse{
  int64 id = 1;
  string name = 2;
  double price = 3;
  int32 quantity_in_stack = 4;
}